@@ -6,7 +6,8 @@ X   X
     * Remove Sword + Flame = lit path (sorry, doesn't work in 1.2+)
     * Remove Axe + Flame II, Pickaxe + Flame II, Shovel + Flame II (see above)
     * Add configurable duration and amplifier to Axe + Aqua Affinity = slowness effect
-    * Add configurable trunk width to Axe + Power = fell tree
+    * Add configurable trunk width and two extra block IDs to Axe + Power = fell tree
+    * Add support for chopping down RP2/IC2 Rubbertrees with Axe + Power = fell tree
     * Add configurable velocity multipler to Boots + Power = witch's broom
     * Add configurable Y velocity to Boots + Punch = hover jump
     * Nerf Boots + Punch = hover jump, now jumps 0.7 instead of 1.0 by default
